# gpuselectors

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: contract-gate.yml  daily-catalog-sync.yml
app/: streamlit_app.py
data/catalog_v2/: pricing_catalog.json  pricing_catalog.schema.json  pricing_deltas.json
data/providers_csv/: README.md  anthropic.csv  assemblyai.csv  aws_rekognition.csv  baseten.csv  deepgram.csv  elevenlabs.csv  fireworks.csv  google_cloud.csv  modal.csv  openai.csv  replicate.csv  runpod.csv  together_ai.csv  voyage_ai.csv
data/quality/: quality_metrics.json  quality_metrics.schema.json
docs/: api.md  api_contract_snapshots.md  backend_execution_plan.md  frontend_execution_plan.md  release_notes_v0.1.1.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: pricing_catalog.json
frontend/src/: App.tsx  index.css
scripts/: merge_incoming_provider_copies.py  normalize_gpu_provider_csvs.py  run_api_server.py  sync_catalog_v2.py  update_api_contract_snapshots.py  validate_providers_csv.py
src/inference_atlas/: __init__.py  ai_copilot.py  ai_inference.py  api_models.py  api_server.py  api_service.py  catalog_ranking.py  config.py  contracts.py  data_loader.py  invoice_analyzer.py  mvp_planner.py  performance_data.py  quality_metrics.py
tests/: test_ai_copilot.py  test_ai_inference.py  test_api_contract_snapshots.py  test_api_endpoint_contract_snapshots.py  test_api_server.py  test_api_service.py  test_catalog_ranking.py  test_catalog_v2_connectors.py  test_catalog_v2_csv_quality.py  test_catalog_v2_data_loader.py  test_catalog_v2_sync.py  test_chart_data_linkage.py  test_contracts.py  test_huggingface_data_loader.py  test_invoice_analyzer.py  test_llm_adapters.py  test_llm_router.py  test_mvp_planner.py  test_quality_metrics.py  test_report_contract_snapshots.py
(+86 files in other folders)
