[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-atlas"
version = "0.1.1"
description = "LLM deployment cost optimizer with multi-GPU scaling and traffic modeling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jayesh Suyal"}
]
keywords = ["llm", "gpu", "cost-optimization", "deployment", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.0.0,<2.0.0",
    "openai>=1.0.0,<3.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
api = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
]

[project.urls]
Repository = "https://github.com/jayeshsuyal/InferenceAtlas"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that call external model provider APIs",
]

[tool.coverage.run]
source = ["src/inference_atlas"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
